[gd_scene load_steps=10 format=2]

[ext_resource path="res://revert.png" type="Texture" id=1]
[ext_resource path="res://okay.png" type="Texture" id=2]
[ext_resource path="res://Questions.gd" type="Script" id=3]
[ext_resource path="res://ARLRDBD.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://Professions/artist.PNG" type="Texture" id=5]
[ext_resource path="res://timeBar.png" type="Texture" id=6]
[ext_resource path="res://timeBarRemaining.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 5
extra_spacing_char = 5
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 50
outline_size = 5
font_data = ExtResource( 4 )

[node name="Questions" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.392157, 0.607843, 1, 1 )

[node name="VertCT" type="VBoxContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="Topic" type="Label" parent="Background/VertCT"]
margin_right = 1260.0
margin_bottom = 50.0
rect_min_size = Vector2( 1260, 50 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Topic"
align = 1
valign = 1

[node name="ContentCT" type="HBoxContainer" parent="Background/VertCT"]
margin_top = 54.0
margin_right = 1260.0
margin_bottom = 596.0
rect_min_size = Vector2( 0, 512 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Picture" type="TextureRect" parent="Background/VertCT/ContentCT"]
margin_right = 512.0
margin_bottom = 542.0
rect_min_size = Vector2( 512, 512 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="Question" type="Label" parent="Background/VertCT/ContentCT"]
margin_left = 516.0
margin_right = 1260.0
margin_bottom = 542.0
rect_min_size = Vector2( 0, 512 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Write the question here."
align = 1
valign = 1
autowrap = true

[node name="ButtonCT" type="HBoxContainer" parent="Background/VertCT"]
margin_top = 600.0
margin_right = 1260.0
margin_bottom = 700.0
rect_min_size = Vector2( 0, 100 )

[node name="StuffCT" type="MarginContainer" parent="Background/VertCT/ButtonCT"]
margin_right = 1052.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureProgress" type="TextureProgress" parent="Background/VertCT/ButtonCT/StuffCT"]
margin_right = 1052.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 300.0
value = 25.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 7 )
nine_patch_stretch = true
stretch_margin_left = 50
stretch_margin_top = 10
stretch_margin_right = 50
stretch_margin_bottom = 10

[node name="AnotherQBTN" type="TextureButton" parent="Background/VertCT/ButtonCT"]
margin_left = 1056.0
margin_right = 1156.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_vertical = 3
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 4

[node name="OkayBTN" type="TextureButton" parent="Background/VertCT/ButtonCT"]
margin_left = 1160.0
margin_right = 1260.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_vertical = 3
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 4

[node name="Timer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[connection signal="pressed" from="Background/VertCT/ButtonCT/AnotherQBTN" to="." method="_on_AnotherQBTN_pressed"]
[connection signal="pressed" from="Background/VertCT/ButtonCT/OkayBTN" to="." method="_on_OkayBTN_pressed"]
